--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,10 @@
-
+/**
+ * Tailwind CSS imports
+ * View the full documentation at https://tailwindcss.com
+ */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /**
  * WHAT IS THIS FILE?
@@ -20,4 +26,25 @@ html {
 body {
   padding: 0;
   line-height: inherit;
+  display: flex;
+  justify-content: center;
+  padding: 0px 16px;
+  padding-top: 32px;
+  background: #09090b;
+}
+
+h1 {
+  color: white;
+}
+
+p {
+  color: white;
+}
+
+code {
+  color: white;
+}
+
+main {
+  max-width: 1000px;
 }
